Fix overflow when "Google Symbol" font is selected

--- a/src/main/resources/static/css/sign.css
+++ b/src/main/resources/static/css/sign.css
@@ -177,6 +177,7 @@ select#font-select option {
   background-color: inherit;
   line-height: 30px;
   font-size: 30px;
+  border-radius: 3rem !important;
 }
 
 /* Style the arrow inside the select element: */
